# extendable-pydantic

./: .bumpversion.cfg  .pre-commit-config.yaml  HISTORY.rst  README.md  extendable_pydantic_patcher.pth  pyproject.toml  tox.ini
.github/workflows/: ci.yml
news/: .feature  15.bugfix  17.feature  18.bugfix  19.bugfix  20.bugfix.rst  3.bugfix  9.bugfix  pydanticv1.feature  pydanticv2.feature
src/extendable_pydantic/: __init__.py  _patch.py  main.py  models.py  utils.py
src/pydanticext/: main.py
tests/: conftest.py  test_extendable_base_model.py  test_fastapi.py  test_forward_refs.py  test_generics_inheritance.py  test_inheritance.py  test_relation.py  test_union.py
tests/modtest/: base.py  generics.py
