[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extendable_pydantic"
authors = [{name = "Laurent Mignon", email = "laurent.mignon@acsone.eu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "extendable>=1.2.0",
    "pydantic>=2.0.2",
    "wrapt",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage[toml]",
]
mypy = [
    "mypy>=1.4.1",
]
release = [
    "towncrier",
    "bumpversion",
]

[project.urls]
Source = "https://github.com/lmignon/extendable-pydantic"

[tool.hatch.version]
path="src/extendable_pydantic/version.py"


[tool.hatch.build]
include = ["src/extendable_pydantic", "extendable_pydantic_patcher.pth"]
# TODO add typodoo_activate.pth to editable wheel?
directory = "dist"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
branch = true
source_pkgs = ["extendable_pydantic"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
 ]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/test_forward_refs.py" = ["F821"]

[[tool.mypy.overrides]]
module = "pydantic.main"
implicit_reexport = true

[[tool.mypy.overrides]]
module="pydantic._internal._generate_schema"
implicit_reexport = true

[tool.towncrier]
name = "Extendable Pydantic"
package = "extendable_pydantic"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/lmignon/extendable-pydantic/issues/{issue}>`_"
title_format = "{version} ({project_date})"
